--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
        <h2>welcome to our website</h2>
+       <button>sigin in</button>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum recusandae officiis iure debitis praesentium, quasi fugit ullam voluptate reprehenderit alias quo porro, rem natus ratione possimus ducimus cumque. Ratione, ea.</p>
 </body>
 </html>
